# AdventOfCode2025

./: Cargo.toml  LICENSE  README.md  fetch_files.sh
hardcaml/: README.md  dune-project
hardcaml/_build/: .db  .digest-db  log
hardcaml/_build/default/: README.md  aoc_hardcaml.dune-package  aoc_hardcaml.install  aoc_hardcaml.opam
hardcaml/_build/default/.dune/: configurator  configurator.v2
hardcaml/_build/default/lib/: aoc_hardcaml.cma  aoc_hardcaml.cmxa  aoc_hardcaml.cmxs  aoc_hardcaml.ml-gen  day10_hardware.pp.ml  day10_opt_a_sum_stream.pp.ml  day11_hardware.pp.ml  day11_opt_a_path_aggregator.ml  day11_opt_a_path_aggregator.pp.ml  day11_opt_b_multi_target_vector_dp.ml  day12_hardware.ml  (+73 more)
hardcaml/lib/: day10_hardware.ml  day10_opt_a_sum_stream.ml  day11_hardware.ml  day12_opt_a_chunk_filter.ml  day12_opt_c_hybrid_dp_search.ml  day1_hardware.ml  day2_families.ml  day2_hardware.ml  day2_legacy_bcd.ml  day2_opt_a_range_sum_engine.ml  day2_opt_a_sequential.ml  day2_opt_b_multilane.ml  day2_opt_c_family_unroll.ml  day4_hardware.ml  day5_hardware.ml  day6_opt_b_streaming_line_buffer_pipeline.ml  day6_opt_c_max_parallel_block_eval.ml  day7_hardware.ml  day7_opt_a_timeline_split.ml  day8_opt_b_topk_edges_only.ml  day8_opt_c_spatial_partitioning.ml  day9_opt_a_pairwise_max_area.ml  dune
hardcaml/scripts/: combine_results.py  export_verilog.sh  run_benchmarks.sh  run_with_timeout.py  test.sh  yosys_synth.sh
hardcaml/test/: dune
hardcaml/tutorials/: day1_tutorial.md  day2_tutorial.md  day3_tutorial.md  day4_tutorial.md  year2025_hardware_project_plan.md
(+501 files in other folders)
