(lang dune 3.16)

(name aoc_hardcaml)

(generate_opam_files true)

(source
 (github tatestaples/AdventOfCode2025))

(authors "Tate Staples")

(maintainers "Tate Staples")

(license MIT)

(package
 (name aoc_hardcaml)
 (synopsis "Advent of Code 2025 solutions in OCaml")
 (description "Solutions to Advent of Code 2025 puzzles implemented in OCaml")
 (depends 
  ocaml 
  dune 
  core
  hardcaml
  ppx_jane
  ppx_hardcaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
